feat: re-calc model pricing
